demo/canary/subset-based-rollout/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
spec:
  replicas: 1
  strategy:
    canary:
      stableMetadata:
        labels:
          # version: stable
          # service.istio.io/canonical-revision: stable

      canaryMetadata:
        labels:
          # version: canary
          # service.istio.io/canonical-revision: canary
      # analysis:
      #   templates:
      #   # - templateName: error-rate
      #   - templateName: http-benchmark
      #   startingStep: 1
      #   args:
      #   # - name: service-name
      #   #   value: rollouts-demo.sm-rollouts-demo.svc.cluster.local
      #   - name: host
      #     value: rollouts-demo.sm-rollouts-demo.svc.cluster.local
      trafficRouting:
        istio:
          virtualServices:
          - name: rollout-vsvc
            routes:
            - primary
          destinationRule:
            name: rollout-destrule
            canarySubsetName: canary
            stableSubsetName: stable
      steps:
      - setWeight: 10
      - pause: {}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
        # istio-injection: enabled
        # version: "1.0"
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:blue
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
