demo/canary/subset-based-rollout/base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rollouts-demo-gateway
  namespace: argo-rollouts-demo
  annotations:
     argocd.argoproj.io/sync-options: Prune=false
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    # - "rollout-app.apps.sno-local.phybernet.org"
    - "rollout-app.apps.cluster-g9w5w.g9w5w.sandbox1118.opentlc.com"
